--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Você decide o futuro da IA</title>
+    <title>Preferẽncia de viagem entre cidade e campo</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
